--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ commands:
           name: Destroy s3 bucket
           when: on_fail
           command: |
-            aws s3 rm s3://udapeople-<< parameters.workflow_id >> --recursive
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
       - run:
           name: Destroy Stacks
           when: on_fail
@@ -39,10 +40,7 @@ commands:
               aws cloudformation delete-stack --stack-name udapeople-for-workflow
 
   revert-migrations:
-    description: Revert the last migration if successfully run in the current workflow.
-    parameters:
-      workflow_id:
-        type: string     
+    description: Revert the last migration if successfully run in the current workflow.    
     steps:
       - run:
           name: Revert migrations
@@ -253,6 +251,7 @@ jobs:
               ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
         # Here's where you will add some code to rollback on failure
         - revert-migrations
+              workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
         - destroy-environment    
 
   run-migrations:
