--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,15 +43,22 @@ commands:
           name: Revert migrations
           # Add when this will run
           command: |
-            SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request GET https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID})
-            echo "************** SUCCESS = $SUCCESS"
-            SUCCESS = 1
-            if(( $SUCCESS==1 )); 
+            # SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            # --request GET https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID})
+            # echo "************** SUCCESS = $SUCCESS"
+            # SUCCESS = 1
+            # if(( $SUCCESS==1 )); 
+            # then
+            #   cd backend
+            #   npm install
+            #   npm run migrations:revert
+            # fi
+            SUCCESS=$(curl -H "token: e52b52de-ee26-41a5-86e8-e8dcc3d995a5" --request GET https://api.memstash.io/values/migration_<< parameters.workflow_id >>)
+            if (( $SUCCESS == 1 ));
             then
-              cd backend
+              cd ~/project/backend
               npm install
-              npm run migrations:revert
+              npm run migration:revert
             fi
               
 jobs:
@@ -279,16 +286,23 @@ jobs:
             # Your code here
             # exit 1
             cd backend
-             if grep -q "has been executed successfully." migration.txt
+            #  if grep -q "has been executed successfully." migration.txt
+            # then
+            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            # --request PUT \
+            # --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            # else
+            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            # --request PUT \
+            # --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            # fi
+            if  grep "has been executed successfully" backend/migration.txt
             then
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request PUT \
-            --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
-            else
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request PUT \
-            --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            curl -H "Content-Type: text/plain" -H "token: 8d7a2579-08d6-4634-ab0f-9991b68afb95" --request PUT --data "$BACKEND_IP" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}      
             fi
+            SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
+            echo "Value sent to memstash: $SUCCESS"
       
       - destroy-environment 
 
