--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,15 @@ commands:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.  
     steps:
       - run:
+            name: Install AWS CLI if not Exist
+            when: on_fail
+            command: |
+              if ! [ -x "$(command -v aws)" ]; then
+              pip install awscli
+              else
+              echo "AWS CLI already installed"
+              fi
+      - run:
           name: print destruction prompt
           when: on_fail
           command: |
