--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,16 +52,6 @@ commands:
           name: Revert migrations
           # Add when this will run
           command: |
-            # SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            # --request GET https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID})
-            # echo "************** SUCCESS = $SUCCESS"
-            # SUCCESS = 1
-            # if(( $SUCCESS==1 )); 
-            # then
-            #   cd backend
-            #   npm install
-            #   npm run migrations:revert
-            # fi
             SUCCESS=$(curl -H "token: e52b52de-ee26-41a5-86e8-e8dcc3d995a5" --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
             if (( $SUCCESS == 1 ));
             then
@@ -415,27 +405,57 @@ jobs:
             then
               return 1
             else
-              return 1
+              return 0
             fi
       # Here's where you will add some code to rollback on failure 
       
       - destroy-environment 
       - revert-migrations 
 
-#   cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: install Dependencies
+          command: |
+            yum -y install tar gzip
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            export OldWorkflowID=$(aws cloudformation list-exports \
+            --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            
+            export STACKS=$(aws cloudformation list-stacks \
+            --query "StackSummaries[*].StackName" \
+            --stack-status-filter CREATE_COMPLETE \
+            --no-paginate --output text)
+            
+            echo OldWorkflowID: "$OldWorkflowID"
+            echo STACKS: "$STACKS" 
+            
+            aws cloudformation deploy \
+            --template-file /root/project/.circleci/files/cloudfront.yml \
+            --stack-name udapeople-cloudfront \
+            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
+
+            echo Delete old stacks/resources
+            
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
+            then              
+              aws s3 rb s3://udapeople-${OldWorkflowId} --force              
+              aws cloudformation delete-stack --stack-name "n-udacity-backend-${OldWorkflowID}"             
+              aws cloudformation delete-stack --stack-name "n-udacity-frontend-${OldWorkflowID}"
+            fi
+      
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations
+        
+        
 
 # cleanup:
 #     docker:
@@ -484,7 +504,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
