--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,7 +431,7 @@ jobs:
             export STACKS=$(aws cloudformation list-stacks \
             --query "StackSummaries[*].StackName" \
             --stack-status-filter CREATE_COMPLETE \
-            --no-paginate --output text))
+            --no-paginate --output text)
             
             echo OldWorkflowID: "${OldWorkflowID}"
             echo STACKS: "$STACKS" 
