--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -442,39 +442,44 @@ jobs:
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
 
-            # echo Delete old stacks/resources
-            
-            # if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
-            # then              
-            #   aws s3 rm s3://udapeople-${OldWorkflowId} --recursive             
-            #   aws cloudformation delete-stack --stack-name "n-udapeople-backend-${OldWorkflowID}"             
-            #   aws cloudformation delete-stack --stack-name "n-udapeople-frontend-${OldWorkflowID}"
-            # fi
-      
       # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations
         
-        
+cleanup:
+    docker:
+      # Docker image here
+    steps:
+      # Checkout code from git
+      - run:
+          name: Get old stack workflow id
+          command: |
+            # your code here
+            export OldWorkflowID="the id here"
+            export STACKS=[] #put the list of stacks here
+      - run:
+          name: Remove old stacks and files
+          command: |
+           export OldWorkflowID=$(aws cloudformation list-exports \
+            --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            
+            export STACKS=($(aws cloudformation list-stacks \
+            --query "StackSummaries[*].StackName" \
+            --stack-status-filter \
+            --no-paginate --output text))
+            
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo STACKS: "${STACKS}" 
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi     
+            echo Delete old stacks/resources
+            
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
+            then              
+              aws s3 rm s3://udapeople-${OldWorkflowId} --recursive             
+              aws cloudformation delete-stack --stack-name "n-udapeople-backend-${OldWorkflowID}"             
+              aws cloudformation delete-stack --stack-name "n-udapeople-frontend-${OldWorkflowID}"
+            fi    
 
 workflows:
   default:
@@ -506,5 +511,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
