--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -460,26 +460,20 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
-              export OldWorkflowID=$(aws cloudformation list-exports \
-                --query "Exports[?Name==\`WorkflowID\`].Value" \
-                --no-paginate --output text)
-                
-                export STACKS=($(aws cloudformation list-stacks \
-                --query "StackSummaries[*].StackName" \
-                --stack-status-filter \
-                --no-paginate --output text))
-                
-                echo OldWorkflowID: "${OldWorkflowID}"
-                echo STACKS: "${STACKS}" 
-
-                echo Delete old stacks/resources
-                
-                if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
-                then              
-                  aws s3 rm s3://udapeople-${OldWorkflowId} --recursive             
-                  aws cloudformation delete-stack --stack-name "n-udapeople-backend-${OldWorkflowID}"             
-                  aws cloudformation delete-stack --stack-name "n-udapeople-frontend-${OldWorkflowID}"
-                fi    
+              export OldWorkflowID=$(aws cloudformation \
+              list-exports --query 'Exports[?Name==`WorkflowID`].Value' \
+              --no-paginate --output text)
+              
+              export STACKS=($aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)          
+              echo Old Workflow Id: "${OldWorkflowID}"
+              echo New Workflow Id: "${CIRCLE_WORKFLOW_ID}"
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-prod-backendstack-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-prod-frontendstack-${OldWorkflowID}"
+              fi
 
 workflows:
   default:
