--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
         - add_ssh_keys:
             fingerprints: ["1c:bf:6b:09:54:ae:cf:fa:d0:e3:37:74:57:01:67:c3"]
         - attach_workspace:
-             at: .circleci/ansible
+             at: ~/
         - run:
             name: Install dependencies
             command: |
@@ -249,7 +249,7 @@ jobs:
               pwd &&
               ls -la
               cat .circleci/ansible/inventory.txt
-              ansible-playbook -i /inventory.txt .circleci/ansible/configure-server.yml
+              ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
         # Here's where you will add some code to rollback on failure
         - destroy-environment    
 
