--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,9 +227,9 @@ jobs:
             TYPEORM_ENTITIES: $TYPEORM_ENTITIES
       steps:
         - checkout 
-        # Add ssh keys with fingerprint
+        # Add ssh keys with fingerprints 
         - add_ssh_keys:
-            fingerprints: ["1c:bf:6b:09:54:ae:cf:fa:d0:e3:37:74:57:01:67:c3"]
+            fingerprints: [1c:bf:6b:09:54:ae:cf:fa:d0:e3:37:74:57:01:67:c3]
         - attach_workspace:
              at: ~/
         - run:
@@ -343,7 +343,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["1c:bf:6b:09:54:ae:cf:fa:d0:e3:37:74:57:01:67:c3"]
+          fingerprints: [1c:bf:6b:09:54:ae:cf:fa:d0:e3:37:74:57:01:67:c3]
       - attach_workspace:
           at: ~/
       
