--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,15 +1,15 @@
 - name: "Copy compiled backend app"
   become: true
   copy:
-    src: artifact.tar.gz
+    src: /root/project/artifact.tar.gz
     dest: /home/ubuntu
 
 - name: "Unzip backend files to correct directory"
 
   shell: |
       cd /home/ubuntu
-      tar -xzvf dist.tar.gz
-      rm -rf dist.tar.gz
+      tar -xzvf artifact.tar.gz -C .
+      rm -rf artifact.tar.gz
 - name: "Copy compiled backend app"
   become: true
   copy:
