--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,17 +169,18 @@ jobs:
 
   deploy-infrastructure:
       docker:
-        - image: amazon/aws-cli
+        # - image: amazon/aws-cli
       steps:
-        - checkout
+        # - checkout
         - run:
             name: Ensures deployment of back-end infrastructure
             command: |
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
-                --tags project=udapeople \
-                --stack-name "udapeople-backend-$WORKFLOW-ID" \
-                --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+                # --tags project=udapeople \
+                # --stack-name "udapeople-backend-$WORKFLOW-ID" \
+                # --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+                exit 1
         - run:
             name: Ensures deployment of front-end infrastructure
             command: |
