--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,7 @@ jobs:
 
   deploy-infrastructure:
       docker:
-        # - image: amazon/aws-cli
+        - image: amazon/aws-cli
       steps:
         # - checkout
         - run:
