--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,20 +166,20 @@ jobs:
             command: |
               cd backend
               npm audit fix --audit-level=critical 
-
+  
   deploy-infrastructure:
       docker:
         - image: amazon/aws-cli
       steps:
-        # - checkout
+        - checkout
         - run:
             name: Ensures deployment of back-end infrastructure
             command: |
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
-                # --tags project=udapeople \
-                # --stack-name "udapeople-backend-$WORKFLOW-ID" \
-                # --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+                --tags project=udapeople \
+                --stack-name "udapeople-backend-$WORKFLOW-ID:0:7" \
+                --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
                 exit 1
         - run:
             name: Ensures deployment of front-end infrastructure
@@ -187,7 +187,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/frontend.yml \
                 --tags project=udapeople \
-                --stack-name "udapeople-frontend-$WORKFLOW-ID" \
+                --stack-name "udapeople-frontend-$WORKFLOW-ID:0:7" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
         - run:
         #install tar for adding backend ip to ansible inventory.
