--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,7 @@ jobs:
             command: |
               cd backend
               npm audit fix --audit-level=critical 
-  
+
   deploy-infrastructure:
       docker:
         - image: amazon/aws-cli
@@ -178,7 +178,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
                 --tags project=udapeople \
-                --stack-name "udapeople-backend-$WORKFLOW-ID:0:7" \
+                --stack-name "udapeople-backend-$WORKFLOW-ID" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
                 exit 1
         - run:
@@ -187,7 +187,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/frontend.yml \
                 --tags project=udapeople \
-                --stack-name "udapeople-frontend-$WORKFLOW-ID:0:7" \
+                --stack-name "udapeople-frontend-$WORKFLOW-ID" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
         - run:
         #install tar for adding backend ip to ansible inventory.
