--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
                 --tags project=udapeople \
-                --stack-name "udapeople-backend-$WORKFLOW-ID" \
+                --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
                 exit 1
         - run:
@@ -187,7 +187,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/frontend.yml \
                 --tags project=udapeople \
-                --stack-name "udapeople-frontend-$WORKFLOW-ID" \
+                --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
         - run:
         #install tar for adding backend ip to ansible inventory.
